# Mythologizer

./: README.md  hello.py  pyproject.toml  server.py  studio_sim.json
api/: subtitles.py
mythologizer/: __init__.py  dynamic_studio_simulation.py  main.py  studio_simulation.py  test_culture.py  test_population.py  test_random.py  test_register.py
mythologizer/agent/: __init__.py  agent.py  base_agent.py
mythologizer/agent_attribute/: __init__.py  agent_attribute.py  agent_attribute_register.py  attribute_test.py
mythologizer/agent_attribute_matrix/: __init__.py  agent_attribute_matrix.py
mythologizer/culture/: __init__.py  attribute_distribution.py  culture.py  culture_register.py
mythologizer/llm/: __init__.py  culture_distributions.py  interaction_handler.py  myth.py
mythologizer/memory/: __init__.py  memory.py
mythologizer/myth_exchange/: __init__.py  myth_exchange.py
mythologizer/myths/: __init__.py  myth.py
mythologizer/population/: __init__.py  agent_matrix.py  helpers.py  population.py  population_old.py
mythologizer/population_handler/: __init__.py  agent_lifecycle_manager.py  population_handler.py
mythologizer/random_helpers/: __init__.py  rng.py
mythologizer/random_number_generator/: __init__.py  distributions.py  rng.py
mythologizer/registry/: __init__.py  registry.py
mythologizer/sandbox/: loader.py  sandbox.py
src/: setup.py
src/myth_simulation/: __init__.py  main.py
src/myth_simulation/agents/: base_agent.py
src/myth_simulation/attributes/: agent_attribute.py  (+1 more)
src/mythologizer/: __init__.py  main.py
tests/: test.py
(+9 files in other folders)
