[tool.poetry]
name = "mythologizer"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
            "Pierre-Louis Suckrow <suckrowpierre@gmail.com>",
            "Célestin Meunier",
            "Lilli Kurth",
            "Eman Safavi"
]
urls = { Homepage = "https://github.com/suckrowPierre/Mythologizer" }

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.4"
pydantic = "^2.10.6"
numpy = "^2.2.2"
openai = "^1.60.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
