[project]
name = "mythologizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "numpy>=2.2.2",
    "ollama>=0.4.7",
    "openai>=1.61.1",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]
